automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </ul>
     </div>
   </script> -->
-  <form id="recipe-template" onsubmit="createPost();return false;">
+  <form id="recipe-form" onsubmit="createPost();return false;">
       Title: <input type="text" id="postTitle"><br>
       Author: <input type="text" id="postAuthor"><br>
       Post: <input type="text" id="postBody"><br>
